# data-engineering-rust

./: Cargo.toml  Makefile  README.md
.devcontainer/: Dockerfile  devcontainer.json
week-1/: Makefile
week-1/.github/workflows/: makefile.yaml
week-1/Final Week-Reflection/: Makefile
week-1/Final Week-Reflection/fully-connected-graph/: Cargo.toml
week-1/Final Week-Reflection/fully-connected-graph/src/: main.rs
week-1/Final Week-Reflection/w1l2-final-reflection/: Cargo.toml
week-1/Final Week-Reflection/w1l2-final-reflection/src/: main.rs
week-1/Lesson 1 - Rust Sequences and Maps/: Makefile
week-1/Lesson 1 - Rust Sequences and Maps/cli-salad/src/: main.rs
week-1/Lesson 1 - Rust Sequences and Maps/example/src/: main.rs
week-1/Lesson 1 - Rust Sequences and Maps/hashmap-language/: Makefile
week-1/Lesson 1 - Rust Sequences and Maps/lesson-reflection/: Cargo.toml
week-1/Lesson 1 - Rust Sequences and Maps/lesson-reflection/src/: main.rs
week-1/Lesson 1 - Rust Sequences and Maps/vecdeque-fruit-salad/src/: main.rs
week-1/Lesson 2 - Rust Sets, Graphs and Misc Data Structures/: Makefile
week-1/Lesson 2 - Rust Sets, Graphs and Misc Data Structures/binaryheap-fruit/src/: main.rs
week-1/Lesson 2 - Rust Sets, Graphs and Misc Data Structures/btreeset-fruit/src/: main.rs
week-1/Lesson 2 - Rust Sets, Graphs and Misc Data Structures/community-detection/: Cargo.toml
week-1/Lesson 2 - Rust Sets, Graphs and Misc Data Structures/community-detection/src/: main.rs
week-1/Lesson 2 - Rust Sets, Graphs and Misc Data Structures/graph-centrality-ufc/src/: main.rs
week-1/Lesson 2 - Rust Sets, Graphs and Misc Data Structures/graph-visualize/src/: main.rs
week-1/Lesson 2 - Rust Sets, Graphs and Misc Data Structures/hashset-fruit/src/: main.rs
week-1/Lesson 2 - Rust Sets, Graphs and Misc Data Structures/lisbon-shortest-path/src/: main.rs
week-1/Lesson 2 - Rust Sets, Graphs and Misc Data Structures/neo4j-data-science-lib/: Cargo.toml
week-1/Lesson 2 - Rust Sets, Graphs and Misc Data Structures/neo4j-data-science-lib/src/: main.rs
week-1/Lesson 2 - Rust Sets, Graphs and Misc Data Structures/russian-troll-tweets/: Cargo.toml
week-1/Lesson 2 - Rust Sets, Graphs and Misc Data Structures/w1l2-lesson-reflection/: Cargo.toml
week-1/Lesson 2 - Rust Sets, Graphs and Misc Data Structures/when-use-rust-set/: Cargo.toml
week-1/Module 1 - Rust Sequences and Maps/cli-salad/: Makefile
week-1/Module 1 - Rust Sequences and Maps/example/: Makefile
week-1/cli-salad/: Cargo.toml
week-1/cli-salad/src/: lib.rs
week-1/hashmap-count/src/: main.rs
week-1/hashmap-language/src/: main.rs
week-1/linked-list-fruit-salad/src/: main.rs
week-1/rust-collections-docs/: Cargo.toml
week-1/rust-collections-docs/benches/: collections.rs
week-1/vecdeque-fruit-salad/: Makefile
week-1/vector-fruit-salad/: Cargo.toml
week-1/vector-fruit-salad/src/: main.rs
week-2/: Makefile
week-2/Lesson 1 - Rust Safety and Security Features/: Makefile
week-2/Lesson 1 - Rust Safety and Security Features/cli-customize-fruit-salad/: .gitignore
week-2/Lesson 1 - Rust Safety and Security Features/meet-safe-and-unsafe/: Cargo.toml
week-2/Lesson 1 - Rust Safety and Security Features/mutable-fruit-salad/: Cargo.toml
week-2/Lesson 1 - Rust Safety and Security Features/obrm/: Cargo.toml
week-2/Lesson 1 - Rust Safety and Security Features/ownership-lifetimes/: Cargo.toml
week-2/Lesson 1 - Rust Safety and Security Features/w2l1-lesson-reflections/: Cargo.toml
week-2/Lesson 2 - Safety, Security and Concurrency with Rust/: Makefile
week-2/Lesson 2 - Safety, Security and Concurrency with Rust/rust-crypto_hashes/: Cargo.toml
week-2/Lesson 2 - Safety, Security and Concurrency with Rust/rust-software-security/: Cargo.toml
week-2/Lesson 2 - Security Programming with Rust/: Makefile
week-2/Lesson 2 - Security Programming with Rust/decoder-ring/: Cargo.toml
week-2/Lesson 2 - Security Programming with Rust/decoder-ring/benches/: bench.rs
week-2/Lesson 2 - Security Programming with Rust/decoder-ring/src/: lib.rs  main.rs
week-2/Lesson 2 - Security Programming with Rust/w2l2-lesson-reflections/: Cargo.toml
week-2/Lesson 3 - Concurrency with Rust/: Makefile
week-2/Lesson 3 - Concurrency with Rust/challenges-opportunities-distributed/: Cargo.toml
week-2/Lesson 3 - Concurrency with Rust/concurrency-parallelism/: Cargo.toml
week-2/Lesson 3 - Concurrency with Rust/data-races-race-conditions/: Cargo.toml
week-2/Lesson 3 - Concurrency with Rust/dining-philosophers/: Cargo.toml
week-2/Lesson 3 - Concurrency with Rust/distributed-computing-concurrency/: Cargo.toml
week-2/Lesson 3 - Concurrency with Rust/rayon-challenge/: Cargo.toml
week-2/Lesson 3 - Concurrency with Rust/w2l3-lesson-reflections/: Cargo.toml
week-3/: Makefile
week-3/Lesson 1 - Using Rust to Manage Data, Files and Network Storage/: .gitignore  Makefile
week-3/Lesson 1 - Using Rust to Manage Data, Files and Network Storage/csv-cookbook/: Cargo.toml
week-3/Lesson 1 - Using Rust to Manage Data, Files and Network Storage/csv-writer/: Cargo.toml
week-3/Lesson 1 - Using Rust to Manage Data, Files and Network Storage/parquet/: Cargo.toml
week-3/Lesson 1 - Using Rust to Manage Data, Files and Network Storage/w3l1-lesson-reflections/: Cargo.toml
week-3/Lesson 2 - DataFrames with Rust, Python and Notebooks/: Makefile
week-3/Lesson 2 - DataFrames with Rust, Python and Notebooks/exploring-pandas/: .gitignore  exploring-pandas.ipynb
week-3/Lesson 2 - DataFrames with Rust, Python and Notebooks/rust-jupyter-notebook/: Cargo.toml
(+37 files in other folders)
