[workspace]

members = [
    "week-1/Lesson 1 - Rust Sequences and Maps/example",
    "week-1/Lesson 1 - Rust Sequences and Maps/hashmap-count",
    "week-1/Lesson 1 - Rust Sequences and Maps/hashmap-language",
    "week-1/Lesson 1 - Rust Sequences and Maps/vector-fruit-salad",
    "week-1/Lesson 1 - Rust Sequences and Maps/vecdeque-fruit-salad",
    "week-1/Lesson 1 - Rust Sequences and Maps/linked-list-fruit-salad", 
    "week-1/Lesson 1 - Rust Sequences and Maps/cli-salad", 
    "week-1/Lesson 1 - Rust Sequences and Maps/rust-collections-docs", "week-1/Lesson 1 - Rust Sequences and Maps/lesson-reflection",
]
resolver = "2"
