[workspace]

members = [
    "week-1/Lesson 1 - Rust Sequences and Maps/example",
    "week-1/Lesson 1 - Rust Sequences and Maps/hashmap-count",
    "week-1/Lesson 1 - Rust Sequences and Maps/hashmap-language",
    "week-1/Lesson 1 - Rust Sequences and Maps/vector-fruit-salad",
    "week-1/Lesson 1 - Rust Sequences and Maps/vecdeque-fruit-salad",
    "week-1/Lesson 1 - Rust Sequences and Maps/linked-list-fruit-salad", 
    "week-1/Lesson 1 - Rust Sequences and Maps/cli-salad", 
    "week-1/Lesson 1 - Rust Sequences and Maps/rust-collections-docs", "week-1/Lesson 1 - Rust Sequences and Maps/lesson-reflection", "week-1/Lesson 2 - Rust Sets, Graphs and Misc Data Structures/russian-troll-tweets", "week-1/Lesson 2 - Rust Sets, Graphs and Misc Data Structures/when-use-rust-set", "week-1/Lesson 2 - Rust Sets, Graphs and Misc Data Structures/rust-iterators", "week-1/Lesson 2 - Rust Sets, Graphs and Misc Data Structures/neo4j-data-science-lib", "week-1/Lesson 2 - Rust Sets, Graphs and Misc Data Structures/graph-centrality-ufc",
]
resolver = "2"
