[workspace]

members = [
    "week-1/Lesson 1 - Rust Sequences and Maps/example",
    "week-1/Lesson 1 - Rust Sequences and Maps/hashmap-count",
    "week-1/Lesson 1 - Rust Sequences and Maps/hashmap-language",
    "week-1/Lesson 1 - Rust Sequences and Maps/vector-fruit-salad",
    "week-1/Lesson 1 - Rust Sequences and Maps/vecdeque-fruit-salad",
    "week-1/Lesson 1 - Rust Sequences and Maps/linked-list-fruit-salad",
    "week-1/Lesson 1 - Rust Sequences and Maps/cli-salad",
    "week-1/Lesson 1 - Rust Sequences and Maps/rust-collections-docs",
    "week-1/Lesson 1 - Rust Sequences and Maps/lesson-reflection",
    "week-1/Lesson 2 - Rust Sets, Graphs and Misc Data Structures/russian-troll-tweets",
    "week-1/Lesson 2 - Rust Sets, Graphs and Misc Data Structures/when-use-rust-set",
    "week-1/Lesson 2 - Rust Sets, Graphs and Misc Data Structures/rust-iterators",
    "week-1/Lesson 2 - Rust Sets, Graphs and Misc Data Structures/neo4j-data-science-lib",
    "week-1/Lesson 2 - Rust Sets, Graphs and Misc Data Structures/graph-centrality-ufc",
    "week-1/Lesson 2 - Rust Sets, Graphs and Misc Data Structures/hashset-fruit",
    "week-1/Lesson 2 - Rust Sets, Graphs and Misc Data Structures/btreeset-fruit",
    "week-1/Lesson 2 - Rust Sets, Graphs and Misc Data Structures/binaryheap-fruit",
    "week-1/Lesson 2 - Rust Sets, Graphs and Misc Data Structures/pagerank",
    "week-1/Lesson 2 - Rust Sets, Graphs and Misc Data Structures/lisbon-shortest-path",
    "week-1/Lesson 2 - Rust Sets, Graphs and Misc Data Structures/community-detection",
    "week-1/Lesson 2 - Rust Sets, Graphs and Misc Data Structures/graph-visualize",
    "week-1/Lesson 2 - Rust Sets, Graphs and Misc Data Structures/w1l2-lesson-reflection",
    "week-1/Final Week-Reflection/fully-connected-graph",
    "week-1/Final Week-Reflection/w1l2-final-reflection",
    "week-2/Lesson 1 - Rust Safety and Security Features/mutable-fruit-salad",
    "week-2/Lesson 1 - Rust Safety and Security Features/cli-customize-fruit-salad",
    "week-2/Lesson 1 - Rust Safety and Security Features/data-race",
    "week-2/Lesson 1 - Rust Safety and Security Features/meet-safe-and-unsafe",
    "week-2/Lesson 1 - Rust Safety and Security Features/ownership-lifetimes",
    "week-2/Lesson 1 - Rust Safety and Security Features/obrm",
    "week-2/Lesson 1 - Rust Safety and Security Features/w2l1-lesson-reflections",
    "week-2/Lesson 2 - Security Programming with Rust/rust-crypto_hashes",
    "week-2/Lesson 2 - Security Programming with Rust/rust-software-security",
    "week-2/Lesson 2 - Security Programming with Rust/decoder-ring", "week-2/Lesson 2 - Security Programming with Rust/w2l2-lesson-reflections", "week-2/Lesson 3 - Concurrency with Rust/concurrency-parallelism", "week-2/Lesson 3 - Concurrency with Rust/data-races-race-conditions", "week-2/Lesson 3 - Concurrency with Rust/send-sync", "week-2/Lesson 3 - Concurrency with Rust/atomics", "week-2/Lesson 3 - Concurrency with Rust/distributed-computing-concurrency", "week-2/Lesson 3 - Concurrency with Rust/challenges-opportunities-distributed", "week-2/Lesson 3 - Concurrency with Rust/dining-philosophers", "week-2/Lesson 3 - Concurrency with Rust/w2l3-lesson-reflections", "week-2/Lesson 3 - Concurrency with Rust/rayon-challenge", "week-3/Lesson 1 - Using Rust to Manage Data, Files and Network Storage/csv-writer",
]
resolver = "2"
