[package]
name = "decoder-ring"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.17", features = ["derive"] }
rayon = "1.10"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "bench"
harness = false